--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-dynamodb": "^3.668.0",
     "@aws-sdk/client-s3": "^3.668.0",
     "@aws-sdk/lib-dynamodb": "^3.668.0",
+    "@aws-sdk/s3-request-presigner": "^3.668.0",
     "@prisma/client": "^5.16.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
