--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.5.1",
     "@types/supertest": "^2.0.16",
     "eslint": "^9.10.0",
     "prisma": "^5.16.1",
-    "serverless": "^4.0.0",
+    "serverless": "^3.2.0",
     "serverless-offline": "^13.0.0",
     "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
