fix(auth+api): use origin for cognito redirects and deploy prisma/iam fixes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "vitest",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
-    "deploy": "serverless deploy",
+    "deploy": "npm run build && serverless deploy",
     "sls:offline": "serverless offline"
   },
   "dependencies": {
