--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,7 @@ provider:
         - dynamodb:GetItem
         - dynamodb:Scan
         - dynamodb:UpdateItem
+        - dynamodb:BatchWriteItem
       Resource:
         - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEME_TABLE_NAME}
     - Effect: Allow
