--- a/serverless.yml
+++ b/serverless.yml
@@ -28,6 +28,13 @@ provider:
       Action:
         - dynamodb:PutItem
         - dynamodb:GetItem
+        - dynamodb:Query
+      Resource:
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEME_DOWNLOADS_TABLE_NAME}
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:GetItem
         - dynamodb:UpdateItem
       Resource:
         - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEME_USERS_TABLE_NAME}
@@ -49,6 +56,7 @@ provider:
     REGION: ${self:provider.region}
     MEME_TABLE_NAME: ${self:service}-${self:provider.stage}-memes
     MEME_LIKES_TABLE_NAME: ${self:service}-${self:provider.stage}-likes
+    MEME_DOWNLOADS_TABLE_NAME: ${self:service}-${self:provider.stage}-downloads
     MEME_USERS_TABLE_NAME: ${self:service}-${self:provider.stage}-users
     MEME_USERNAMES_TABLE_NAME: ${self:service}-${self:provider.stage}-usernames
     MEME_BUCKET_NAME: ${self:service}-${self:provider.stage}-images
@@ -120,6 +128,22 @@ resources:
         KeySchema:
           - AttributeName: username
             KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+
+    MemeDownloadsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:provider.environment.MEME_DOWNLOADS_TABLE_NAME}
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: memeId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: userId
+            KeyType: HASH
+          - AttributeName: memeId
+            KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
 
     MemeImageBucket:
