--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
     "vite": "^5.4.8",
+    "vite-plugin-pwa": "^0.20.5",
     "vitest": "^2.1.3"
   }
 }
