--- a/serverless.yml
+++ b/serverless.yml
@@ -31,6 +31,14 @@ provider:
         - dynamodb:Query
       Resource:
         - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEME_DOWNLOADS_TABLE_NAME}
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEME_DOWNLOADS_TABLE_NAME}/index/*
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:GetItem
+        - dynamodb:Query
+      Resource:
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.MEME_PURCHASES_TABLE_NAME}
     - Effect: Allow
       Action:
         - dynamodb:PutItem
@@ -57,6 +65,7 @@ provider:
     MEME_TABLE_NAME: ${self:service}-${self:provider.stage}-memes
     MEME_LIKES_TABLE_NAME: ${self:service}-${self:provider.stage}-likes
     MEME_DOWNLOADS_TABLE_NAME: ${self:service}-${self:provider.stage}-downloads
+    MEME_PURCHASES_TABLE_NAME: ${self:service}-${self:provider.stage}-purchases
     MEME_USERS_TABLE_NAME: ${self:service}-${self:provider.stage}-users
     MEME_USERNAMES_TABLE_NAME: ${self:service}-${self:provider.stage}-usernames
     MEME_BUCKET_NAME: ${self:service}-${self:provider.stage}-images
@@ -156,6 +165,14 @@ resources:
                 KeyType: RANGE
             Projection:
               ProjectionType: KEYS_ONLY
+          - IndexName: DownloadsByMeme
+            KeySchema:
+              - AttributeName: memeId
+                KeyType: HASH
+              - AttributeName: downloadedAt
+                KeyType: RANGE
+            Projection:
+              ProjectionType: KEYS_ONLY
 
     MemeImageBucket:
       Type: AWS::S3::Bucket
@@ -223,6 +240,22 @@ resources:
 
     MemeUserPoolDomain:
       Type: AWS::Cognito::UserPoolDomain
+
+    MemePurchasesTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:provider.environment.MEME_PURCHASES_TABLE_NAME}
+        AttributeDefinitions:
+          - AttributeName: userId
+            AttributeType: S
+          - AttributeName: memeId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: userId
+            KeyType: HASH
+          - AttributeName: memeId
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
       Properties:
         # If this domain is already taken in your AWS account/region,
         # update the string below and redeploy.
